# companion

./: .gitignore  Gemfile  LICENSE  README.md  SOMETIMES.md  _config.yml  index.md  pyproject.toml  robots.txt
.github/: README.md
.github/scripts/: manage_readmes.py  requirements.txt
.github/workflows/: readme-manager.yml
01-archive/2025-orignal-art/: README.md
01-archive/article-lists/: README.md
01-archive/digests/: README.md
02-articles/: README.md
02-articles/251012-git-github-setup/: README.md
02-articles/251012-git-github-setup/01-input/: README.md
02-articles/251012-git-github-setup/01-input/screens/: README.md
02-articles/251012-git-github-setup/02-assets/: README.md
02-articles/251012-git-github-setup/02-assets/leonardo/: README.md
02-articles/251012-git-github-setup/02-assets/midjourney/: README.md
02-articles/251012-git-github-setup/raw/: README.md
02-articles/251012-git-github-setup/raw/git-articles/: README.md
02-articles/251012-git-github-setup/raw/git-guide/: 18-35-01.md  README.md
02-articles/251012-git-github-setup/raw/in-notebooklm/: 20251101-design-leadership-on-git-001.md  20251101-design-leadership-on-git-002.md  20251101-design-leadership-on-git-003.md  20251101-design-leadership-on-git-005.md  20251101-design-leadership-on-git-006.md  20251101-design-leadership-on-git-007.md  20251101-design-leadership-on-git-008.md  20251101-design-leadership-on-git-009.md  README.md
02-articles/251109-on-authenticity/: README.md
02-articles/251109-on-authenticity/0901-count-that-couldnt/: README.md
02-articles/251109-on-authenticity/0901-count-that-couldnt/01-input/: README.md
02-articles/251109-on-authenticity/0901-count-that-couldnt/02-assets/: README.md
02-articles/251109-on-authenticity/0901-count-that-couldnt/raw/: README.md
02-articles/251109-on-authenticity/0927-algorithmic-theatre/: README.md
02-articles/251109-on-authenticity/0927-algorithmic-theatre/01-input/: README.md
02-articles/251109-on-authenticity/0927-algorithmic-theatre/02-assets/: README.md
02-articles/251109-on-authenticity/0927-algorithmic-theatre/raw/: README.md
02-articles/251109-on-authenticity/1010-crash-course-collaboration/: README.md
02-articles/251109-on-authenticity/1010-crash-course-collaboration/01-input/: README.md
02-articles/251109-on-authenticity/1010-crash-course-collaboration/02-assets/: README.md
02-articles/251109-on-authenticity/1010-crash-course-collaboration/raw/: README.md
02-articles/251109-on-authenticity/1101-new-venue-victory/: README.md
02-articles/251109-on-authenticity/1109-not-magic-beyond-measurement/: README.md
02-articles/raw/: README.md
02-articles/raw/25####-claude-code-preview/: README.md
02-articles/raw/25####-claude-code-preview/01-input/: README.md
04-and-so-on/: README.md  modified.md
09-templates/: README.md
09-templates/readme/: README.md  content-directory-readme.md  index-directory-readme.md
_data/: README.md  navigation.yml
_pages/: README.md  about.md  articles.md  projects.md  resources.md
assets/: README.md
assets/css/: README.md  main.scss
settings/: CONFIGURATION_GUIDE.md  gmail-example.yaml  gmail.yaml  pdf-to-md.yaml  reddit-design-ai.yaml  reddit-design.yaml  reddit-ux-engineer.yaml  reddit.yaml  stackexchange-design.yaml  stackexchange.yaml  transcribe.yaml  web-articles.yaml  web-direct.yaml
templates/: README.md  accessibility-audit.md  architecture-decision-record.md  design-brief.md  design-critique.md  design-decision.md  design-sprint.md  feature-specification.md  findings-report.md  impact-driven-case-study.md  insight-report.md  interview-guide.md  journey-map.md  participant-screener.md  portfolio-case-study.md  prd.md  research-plan.md  system-usability-scale.md  usability-test-plan.md  user-persona.md  wcag-compliance-checklist.md  workshop-facilitation-guide.md
tools/: TOOL_UPDATES.md  __init__.py
tools/_shared/: CURRENT_STATE.md  REFACTORING_PLAN.md  __init__.py  config.py  exceptions.py  filters.py  http_client.py  output.py  security.py  storage.py
tools/_shared/tests/: test_shared_modules.py
tools/gmail/: __init__.py  pyproject.toml
tools/gmail/docs/: ERROR_CODES.md  STATE_FILE_FORMAT.md
tools/gmail/src/: __init__.py
tools/gmail/src/collectors/: __init__.py
tools/gmail/src/collectors/gmail/: README.md  __init__.py  auth.py  cli.py  collector.py  config.py  send_cli.py  work-log.md
tools/gmail/tests/: README.md  __init__.py  conftest.py  test_collector.py  test_config.py
tools/pdf-to-md/: README.md  __init__.py  pdf_to_md.py  pyproject.toml
tools/reddit/: README.md  pyproject.toml
tools/reddit/src/collectors/reddit/: __init__.py  cli.py  collector.py  config.py
tools/stackexchange/: README.md  TESTING_REPORT.md  pyproject.toml
tools/stackexchange/src/collectors/stackexchange/: __init__.py  cli.py  collector.py  config.py
tools/transcribe/: README.md  __init__.py  pyproject.toml  transcribe.py
tools/web_articles/: README.md  __init__.py  pyproject.toml
tools/web_articles/data/: links_for_review.yaml
tools/web_articles/src/: __init__.py
tools/web_articles/src/collectors/: __init__.py
tools/web_articles/src/collectors/web_articles/: __init__.py  cli.py  collector.py  config.py  fetcher.py
tools/web_articles/tests/: __init__.py  conftest.py  test_cli.py  test_collector.py  test_config.py  test_fetcher.py
tools/web_direct/: README.md  __init__.py  pyproject.toml
tools/web_direct/output/web-direct/: 2025-11-05-Code execution with MCP_ building more efficient AI agents.md  2025-11-05-Equipping agents for the real world with Agent Skills.md  2025-11-05-Making Claude Code more secure and autonomous with sandboxing.md
tools/web_direct/src/: __init__.py
tools/web_direct/src/collectors/: __init__.py
tools/web_direct/src/collectors/web_direct/: __init__.py  cli.py  collector.py  config.py
tools/web_direct/tests/: __init__.py  conftest.py  test_collector.py
(+60 files in other folders)
