[project]
name = "reddit-collector"
version = "0.1.0"
description = "Reddit content collector tool"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.7.0",
    "click>=8.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
reddit-collect = "tools.reddit.src.collectors.reddit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
