[project]
name = "stackexchange-collector"
version = "0.1.0"
description = "StackExchange content collector tool"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
stackexchange-collect = "tools.stackexchange.src.collectors.stackexchange.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
