[project]
name = "transcribe"
version = "0.1.0"
description = "Audio transcription tool using faster-whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "faster-whisper~=1.0.0",
    "pydub~=0.25.1",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
transcribe = "transcribe:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
